# tare_planner

./: .gitignore  README.md  package.xml
src/tare_planner/: CMakeLists.txt  package.xml
src/tare_planner/config/: campus.yaml  forest.yaml  garage.yaml  indoor.yaml  matterport.yaml  tunnel.yaml
src/tare_planner/data/: boundary_matterport.ply
src/tare_planner/include/exploration_path/: exploration_path.h
src/tare_planner/include/graph/: graph.h
src/tare_planner/include/grid/: grid.h
src/tare_planner/include/grid_world/: grid_world.h
src/tare_planner/include/keypose_graph/: keypose_graph.h
src/tare_planner/include/lidar_model/: lidar_model.h
src/tare_planner/include/local_coverage_planner/: local_coverage_planner.h
src/tare_planner/include/planning_env/: planning_env.h
src/tare_planner/include/pointcloud_manager/: pointcloud_manager.h
src/tare_planner/include/rollable_grid/: rollable_grid.h
src/tare_planner/include/rolling_grid/: rolling_grid.h
src/tare_planner/include/rolling_occupancy_grid/: rolling_occupancy_grid.h
src/tare_planner/include/sensor_coverage_planner/: sensor_coverage_planner_ground.h
src/tare_planner/include/tare_visualizer/: tare_visualizer.h
src/tare_planner/include/tsp_solver/: tsp_solver.h
src/tare_planner/include/utils/: misc_utils.h  pointcloud_utils.h
src/tare_planner/include/viewpoint/: viewpoint.h
src/tare_planner/include/viewpoint_manager/: viewpoint_manager.h
src/tare_planner/launch/: explore.launch  explore.launch.py  explore_campus.launch  explore_campus.launch.py  explore_forest.launch  explore_forest.launch.py  explore_garage.launch  explore_garage.launch.py  explore_indoor.launch  explore_indoor.launch.py  explore_matterport.launch  explore_matterport.launch.py  explore_tunnel.launch  explore_tunnel.launch.py  record_bag.launch  system.launch  system_campus.launch  system_forest.launch  system_garage.launch  system_indoor.launch  system_tunnel.launch
src/tare_planner/or-tools/: Makefile
src/tare_planner/or-tools/include/: ortools_export.h
src/tare_planner/or-tools/include/absl/base/: options.h
src/tare_planner/or-tools/include/blockmemshell/: memory.h
src/tare_planner/or-tools/include/coin/: CbcOrClpParam.cpp  CglConfig.h  CglLandPMessages.hpp  CglLandPSimplex.hpp  CglLandPTabRow.hpp  CglLandPUtils.hpp  ClpConfig.h  ClpModel.hpp  ClpPdco.hpp  ClpSimplex.hpp  Clp_C_Interface.h  Clp_ampl.h  CoinHelperFunctions.hpp  CoinLpIO.hpp  CoinPresolveDupcol.hpp  CoinUtilsConfig.h  MyEventHandler.hpp  MyMessageHandler.hpp  config_cbc.h  config_cgl.h  config_clp.h  config_coinutils.h  config_osi.h  unitTest.cpp
src/tare_planner/or-tools/include/ortools/bop/: bop_parameters.pb.h
src/tare_planner/or-tools/include/ortools/constraint_solver/: assignment.pb.h  demon_profiler.pb.h  routing_enums.pb.h  routing_parameters.pb.h  search_limit.pb.h  search_stats.pb.h  solver_parameters.pb.h
src/tare_planner/or-tools/include/ortools/data/: rcpsp.pb.h
src/tare_planner/or-tools/include/ortools/glop/: parameters.pb.h
src/tare_planner/or-tools/include/ortools/graph/: flow_problem.pb.h
src/tare_planner/or-tools/include/ortools/gscip/: gscip.pb.h
src/tare_planner/or-tools/include/ortools/linear_solver/: linear_solver.pb.h
src/tare_planner/or-tools/include/ortools/packing/: multiple_dimensions_bin_packing.pb.h  vector_bin_packing.pb.h
src/tare_planner/or-tools/include/ortools/pdlp/: solve_log.pb.h  solvers.pb.h
src/tare_planner/or-tools/include/ortools/sat/: boolean_problem.pb.h  cp_model.pb.h  cp_model_service.pb.h  (+1 more)
src/tare_planner/or-tools/include/scip/: config.h  def.h  scip_export.h
src/tare_planner/or-tools/lib/: libCbc.la  libCbcSolver.so.3.10.1  libClp.so.1  libClpSolver.la  libOsi.so.1.13.1  libOsiCbc.so.3  libOsiCbc.so.3.10.1  libOsiClp.so.1.14.1  libgflags.so.2.2  libgflags.so.2.2.2  libgflags_nothreads.so.2.2  libglog.so.0  libortools.so.9  libortools_flatzinc.so.9  libortools_flatzinc.so.9.6.2534  libprotobuf-lite.so.3.7.1.0
src/tare_planner/or-tools/lib/pkgconfig/: absl_absl_check.pc  absl_absl_log.pc  absl_algorithm.pc  absl_algorithm_container.pc  absl_any.pc  absl_any_invocable.pc  absl_atomic_hook.pc  absl_bad_any_cast.pc  absl_bad_any_cast_impl.pc  absl_bad_optional_access.pc  absl_bad_variant_access.pc  absl_base.pc  absl_base_internal.pc  absl_bind_front.pc  absl_bits.pc  absl_btree.pc  absl_check.pc  absl_city.pc  absl_civil_time.pc  absl_cleanup.pc  absl_cleanup_internal.pc  absl_common_policy_traits.pc  absl_compare.pc  absl_compressed_tuple.pc  absl_config.pc  absl_container_common.pc  absl_container_memory.pc  absl_cord.pc  absl_cord_internal.pc  absl_cordz_functions.pc  absl_cordz_handle.pc  absl_cordz_info.pc  absl_cordz_sample_token.pc  absl_cordz_statistics.pc  absl_cordz_update_scope.pc  absl_cordz_update_tracker.pc  absl_core_headers.pc  absl_counting_allocator.pc  absl_crc32c.pc  absl_crc_cord_state.pc  (+136 more)
src/tare_planner/rviz/: tare_planner_ground.rviz
src/tare_planner/src/exploration_path/: exploration_path.cpp
src/tare_planner/src/graph/: graph.cpp
src/tare_planner/src/grid_world/: grid_world.cpp
src/tare_planner/src/keypose_graph/: keypose_graph.cpp
src/tare_planner/src/lidar_model/: lidar_model.cpp
src/tare_planner/src/local_coverage_planner/: local_coverage_planner.cpp
src/tare_planner/src/navigation_boundary_publisher/: navigationBoundary.cpp
src/tare_planner/src/planning_env/: planning_env.cpp
src/tare_planner/src/pointcloud_manager/: pointcloud_manager.cpp
src/tare_planner/src/rollable_grid/: rollable_grid.cpp
src/tare_planner/src/rolling_grid/: rolling_grid.cpp
src/tare_planner/src/rolling_occupancy_grid/: rolling_occupancy_grid.cpp
src/tare_planner/src/sensor_coverage_planner/: sensor_coverage_planner_ground.cpp
src/tare_planner/src/tare_planner_node/: tare_planner_node.cpp
src/tare_planner/src/tare_visualizer/: tare_visualizer.cpp
src/tare_planner/src/tsp_solver/: tsp_solver.cpp
src/tare_planner/src/utils/: misc_utils.cpp
src/tare_planner/src/viewpoint/: viewpoint.cpp
src/tare_planner/src/viewpoint_manager/: viewpoint_manager.cpp
(+100 files in other folders)
